# umed

./: .gitignore  README.md  docker-compose.yml
app/: .env-template  celerybeat-schedule  pyproject.toml  requirements.txt
app/apps/care_provider/: admin.py  models.py
app/apps/care_provider/fixtures/: care_providers.yaml
app/apps/care_provider/migrations/: 0001_initial.py  0002_alter_careprovider_options.py
app/apps/patient/: admin.py  models.py  tasks.py
app/apps/patient/fixtures/: patients.yaml
app/apps/patient/migrations/: 0001_initial.py  0002_alter_patient_options_alter_patient_cancelled_and_more.py
app/apps/patient/tests/: __init__.py
app/apps/study/: admin.py  models.py
app/apps/study/fixtures/: studies.yaml
app/apps/study/migrations/: 0001_initial.py  0002_alter_study_options.py
app/apps/user/fixtures/: users.yaml
app/core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/docker/docker_files/: Dockerfile
app/docker/entrypoints/: entrypoint.sh
app/libs/: factories.py
app/tasks/: app.py  tasks.py
app/templates/tasks/: patient_email.html
app/utils/: logger.py
